--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "ts-node-dev ./example/server/gateway & webpack serve",
     "build": "tsc --project tsconfig.build.json",
     "prepublishOnly": "npm run build",
-    "release": "npx standard-version"
+    "release": "npx standard-version",
+    "dev": "ts-node-dev ./src/server.demo.ts"
   },
   "dependencies": {
     "@graphql-tools/stitch": "^8.4.3",
@@ -17,6 +18,7 @@
     "apollo-server-express": "^3.6.2",
     "express": "^4.17.2",
     "graphql": "^16.2.0",
+    "graphql-redis-subscriptions": "^2.5.0",
     "graphql-ws": "^5.5.5",
     "node-fetch": "^2.6.7",
     "ws": "^8.4.2"
